# docs/openapi.yml
@@ -3116,6 +3116,18 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /chats/unreads/counts:
+    get:
+      tags:
+        - chat
+      summary: total unread identity messages count
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
   /chats/{id}:
     parameters:
       - name: id
